--- a/fitTracker_app/package.json
+++ b/fitTracker_app/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "method-override": "^3.0.0",
+    "middleware": "^1.0.0",
     "mongoose": "^7.5.2"
   }
 }
