--- a/fitTracker_app/package.json
+++ b/fitTracker_app/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.17.3",
     "method-override": "^3.0.0",
     "middleware": "^1.0.0",
-    "mongoose": "^7.5.2"
+    "mongoose": "^7.5.2",
+    "scss": "^0.2.4"
   }
 }
